installed motion, claude attempt at clippy transition for floater, some manual fixing to clip-path

--- a/src/components/Project.module.css
+++ b/src/components/Project.module.css
@@ -7,6 +7,7 @@
     border-bottom: 1px solid black;
     padding: 16px 0;
     cursor: pointer;
+    overflow: visible;
     &:hover{
          color: blue;
          border-bottom: 1px solid black;
@@ -42,9 +43,23 @@
         visibility: visible;
         transform: scale(1,1);
     }
-    div {
+    > div {
         z-index: 1;
     }
+}
+
+.floaterContainer {
+    position: absolute;
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    clip-path: inset(-1000px 0 0 0);
+}
+
+.floaterContainer[data-animating="true"] {
+    clip-path: inset(0 0 0 0);
 }
 
 .projectList {
